--- a/homestyle.css
+++ b/homestyle.css
@@ -1,3 +1,4 @@
+/* ========= Top Menu ========= */
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
@@ -37,3 +38,7 @@
   height: 100vh;
   border: none;
 }
+/* ========= End Top Menu ========= */
+
+
+
